<resources>
    <string name="app_name">Siteswap Generator</string>
    <string name="main_activity__settings">SITESWAP_GENERATOR_MAIN_ACTIVITY_SETTINGS</string>
    <string name="main_activity__settings_number_of_objects">NUMBER_OF_OBJECTS</string>
    <string name="main_activity__settings_period_length">PERIOD_LENGTH</string>
    <string name="main_activity__settings_max_throw">MAX_THROW</string>
    <string name="main_activity__settings_min_throw">MIN_THROW</string>
    <string name="main_activity__settings_number_of_jugglers">NUMBER_OF_JUGGLERS</string>
    <string name="main_activity__settings_max_results">MAX_RESULTS</string>
    <string name="main_activity__settings_timeout">TIMEOUT</string>
    <string name="main_activity__settings_is_sync_pattern">IS_SYNC_PATTERN</string>
    <string name="main_activity__settings_is_random_generation_mode">IS_RANDOM_GENERATION_MODE</string>
    <string name="main_activity__settings_is_zips">IS_ZIPS</string>
    <string name="main_activity__settings_is_zaps">IS_ZAPS</string>
    <string name="main_activity__settings_is_holds">IS_HOLDS</string>
    <string name="main_activity__settings_filter_spinner_position">FILTER_SPINNER_POSITION</string>
    <string name="main_activity__settings_filter_list">FILTER_LIST</string>
    <string name="main_activity__siteswap">Siteswap:</string>
    <string name="main_activity__number_of_objects">Number of Objects:</string>
    <string name="main_activity__period_length">Period Length:</string>
    <string name="main_activity__max_throw">Max Throw</string>
    <string name="main_activity__min_throw">Min Throw:</string>
    <string name="main_activity__number_of_jugglers">Number of Jugglers:</string>
    <string name="main_activity__max_results">Max Results:</string>
    <string name="main_activity__timeout">Timeout [s]:</string>
    <string name="main_activity__sync_mode">Synchronous Siteswaps</string>
    <string name="main_activity__random_generation_mode">Activate Random Generation Mode</string>
    <string name="main_activity__applied_filters">Filters:</string>
    <string name="main_activity__include_zips">zips</string>
    <string name="main_activity__include_zaps">zaps</string>
    <string name="main_activity__include_holds">holds</string>
    <string name="main_activity__reset_filters">Reset Filters</string>
    <string-array name="main_activity__filter_types">
        <item>Pattern filter</item>
        <item>Number filter</item>
    </string-array>
    <string name="main_activity__number_of_objects_any">any</string>
    <string name="main_activity__max_throw_min_value_number_of_objects">number of objects</string>
    <string name="main_activity__max_throw_min_value_min_throw">min throw</string>
    <string name="main_activity__min_throw_max_value_number_of_objects">number of objects</string>
    <string name="main_activity__min_throw_max_value_max_throw">max throw</string>
    <string name="main_activity__add_filter_button">Add</string>
    <string name="main_activity__enter_siteswap_button">Enter Siteswap</string>
    <string name="main_activity__generate_siteswaps_button">Generate Siteswaps</string>
    <string name="main_activity__invalid_input_value">Invalid Input Value:</string>
    <string name="main_activity__invalid_site_swap">The siteswap is invalid:</string>
    <string name="main_activity__jugglers">jugglers</string>
    <string name="main_activity__io_exeption_toast">IO Exeption</string>
    <string name="main_activity__file_not_found_toast">File not found exception %s</string>
    <string name="main_activity__file_permission_not_granted_for_export">File permission not granted. Cannot export database.</string>
    <string name="main_activity__file_permission_not_granted_for_import">File permission not granted. Cannot import database.</string>
    <string name="main_activity__successfully_exported_database_msg">Successfully Exported Database to %s</string>
    <string name="main_activity__successfully_imported_database_msg">Successfully Imported Database from %s</string>
    <string name="main_activity__import_database_confirmation">Override Favorites and Generation Parameters from %s?</string>
    <string name="main_activity__serialization_error_toast">Error during filter list serialization</string>
    <string name="main_activity__deserialization_error_toast">Error during filter list deserialization</string>
    <string name="main_activity__could_not_convert_to_int">Conversion to int not possible %s</string>
    <string name="main_activity__invalid_period_length">The period length must be greater than zero</string>
    <string name="main_activity__invalid_number_of_objects">The number of objects must be greater than zero</string>
    <string name="main_activity__invalid_number_of_jugglers">The number of jugglers must be between one and ten</string>
    <string name="main_activity__invalid_max_throw_smaller_average">The maximum throw needs to be at least the number of objects</string>
    <string name="main_activity__invalid_min_throw_greater_average">The minimum throw needs to be at maximum the number of objects</string>
    <string name="main_activity__option_load_generation_parameters">Load Generation Parameters</string>
    <string name="main_activity__option_save_generation_parameters">Save Generation Parameters</string>
    <string name="main_activity__option_delete_generation_parameters">Delete Generation Parameters</string>
    <string name="main_activity__option_named_siteswaps">Named Siteswaps</string>
    <string name="main_activity__option_favorites">Favorites</string>
    <string name="main_activity__option_export_database">Export App database</string>
    <string name="main_activity__option_import_database">Import App database</string>
    <string name="main_activity__option_about">About</string>
    <string name="main_activity__option_help">Help</string>
    <string name="main_activity__random_generation_mode_help">
        <![CDATA[
       <h2>Random Generation Mode</h2>
       <p>When generating very long siteswaps, typically you do not want
       to get all possible siteswaps, but just a hand ful of interesting
       ones. With the systematic siteswap generation approach the first
       generated Siteswaps are all very similar and often boring. By using
       the random generation mode, siteswaps are generated in random order
       and thus avoid boring siteswaps. Note that in this mode, there is no
       test of duplicate Siteswaps and the siteswap generation is only limited
       by the generation timeout and maximum number of results. Using
       this mode for short siteswaps results in many duplicate siteswaps in
       random order.r</p>
        ]]>
    </string>
    <string name="ok">Ok</string>
    <string name="cancel">cancel</string>
    <string name="abort">abort</string>
    <string name="remove">remove</string>
    <string name="back">back</string>
    <string name="add">add</string>
    <string name="share">Share</string>
    <string name="share_via">Share via</string>
    <string name="save">save</string>
    <string name="generate">generate</string>
    <string name="named_siteswaps__title">Named Siteswaps</string>
    <string name="favorites__title_siteswaps">All Saved Siteswaps</string>
    <string name="favorites__title_jugglers">Favorites by Jugglers</string>
    <string name="favorites__title_locations">Favorites by Locations</string>
    <string name="favorites__title_dates">Favorites by Date</string>
    <string name="favorites__title_waiting_for_database_query">Waiting for database query ...</string>
    <string name="favorites__option_show_all">Show All</string>
    <string name="favorites__option_show_jugglers">Show Jugglers</string>
    <string name="favorites__option_show_locations">Show Locations</string>
    <string name="favorites__option_show_dates">Show Dates</string>
    <string name="favorites__preference_filter_type">FAVORITES_FILTER_TYPE</string>
    <string name="favorites__preference_database_search_key">FAVORITES_DATABASE_SEARCH_KEY</string>
    <string name="favorites__preference_is_view_siteswaps">FAVORITES_IS_VIEW_SITESWAPS</string>
    <string name="option_about__source_code_at">Source Code at:</string>
    <string name="option_about__github_address">https://github.com/namlit/siteswap_generator</string>
    <string name="option_about__post_on_github">Please post bug reports and feature requests at the github page.</string>
    <string name="show_siteswaps__title_generating">Generating Siteswaps ...</string>
    <string name="show_siteswaps__title_found_all">Found %d Siteswaps</string>
    <string name="show_siteswaps__title_timeout_reached">Timeout Reached: Found %d Siteswaps</string>
    <string name="show_siteswaps__title_limit_reached">Limit Reached: Found %d Siteswaps</string>
    <string name="show_siteswaps__title_memory_full">Memory Full: Found %d Siteswaps</string>
    <string name="show_siteswaps__title_cancelled">Siteswap Generation Cancelled</string>
    <string name="show_siteswaps__saved_is_no_timeout">IS_NO_TIMEOUT</string>
    <string name="show_siteswaps__saved_siteswap_generator">SITESWAP_GENERATOR</string>
    <string name="show_siteswaps__share_to_many_siteswaps">...</string>
    <string name="filter__add_button">Add</string>
    <string name="filter__remove_button">Remove</string>
    <string name="filter__cancel_button">Cancel</string>
    <string name="filter__replace_button">Replace</string>
    <string name="pattern_filter__title">Pattern Filter</string>
    <string name="pattern_filter__pattern_checkbox">pattern</string>
    <string name="pattern_filter__interface">interface</string>
    <string name="pattern_filter__global">global</string>
    <string name="pattern_filter__local">local</string>
    <string name="pattern_filter__include">include</string>
    <string name="pattern_filter__exclude">exclude</string>
    <string name="pattern_filter__pattern">Pattern:</string>
    <string name="pattern_filter__description_html">
        <![CDATA[
       <h2>Legend</h2>
       <b>p</b>: pass<br>
       <b>s</b>: self<br>
       <b>?</b>: do not care<br>
       <b>0-9</b>: throw with height 0-9<br>
       <b>a-z</b>: throw with height 10-36<br>
       <b>other</b>: invalid<br>
        ]]>
    </string>
    <string name="pattern_filter__shared_preferences">PATTERN_FILTER__SHARED_PREFERNECES</string>
    <string name="pattern_filter__shared_preferences_pattern_checked">PATTERN_FILTER__SHARED_PREFERNECES_PATTERN_CHECKED</string>
    <string name="pattern_filter__shared_preferences_interface_checked">PATTERN_FILTER__SHARED_PREFERNECES_INTERFACE_CHECKED</string>
    <string name="pattern_filter__shared_preferences_global_checked">PATTERN_FILTER__SHARED_PREFERNECES_GLOBAL_CHECKED</string>
    <string name="pattern_filter__shared_preferences_local_checked">PATTERN_FILTER__SHARED_PREFERNECES_LOCAL_CHECKED</string>
    <string name="pattern_filter__shared_preferences_include_checked">PATTERN_FILTER__SHARED_PREFERNECES_INCLUDE_CHECKED</string>
    <string name="pattern_filter__shared_preferences_exclude_checked">PATTERN_FILTER__SHARED_PREFERNECES_EXCLUDE_CHECKED</string>
    <string name="number_filter__at_least">at least</string>
    <string name="number_filter__not_more">not more</string>
    <string name="number_filter__exactly">exactly</string>
    <string name="number_filter__throws_of_height">Throws of height</string>
    <string name="add_to_favorites__name">Favorite Name:</string>
    <string name="add_to_favorites__juggler">Who:</string>
    <string name="add_to_favorites__location">Where</string>
    <string name="add_to_favorites__date">When</string>
    <string name="detailed_siteswap__option_rotate_default">Rotate to default starting position</string>
    <string name="detailed_siteswap__option_add_to_favorites">Add to Favorites</string>
    <string name="detailed_siteswap__option_remove_from_favorites">Remove from Favorites</string>
</resources>