<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_save_generation_parameters" android:title="@string/main_activity__option_save_generation_parameters"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_load_generation_parameters" android:title="@string/main_activity__option_load_generation_parameters"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_delete_generation_parameters" android:title="@string/main_activity__option_delete_generation_parameters"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_named_siteswaps" android:title="@string/main_activity__option_named_siteswaps"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_favorites" android:title="@string/main_activity__option_favorites"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_help" android:title="@string/main_activity__option_help"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_about" android:title="@string/main_activity__option_about"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>
