<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".FavoritesActivity">
    <item android:id="@+id/action_show_all" android:title="@string/favorites__option_show_all"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_show_jugglers" android:title="@string/favorites__option_show_jugglers"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_show_locations" android:title="@string/favorites__option_show_locations"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_show_dates" android:title="@string/favorites__option_show_dates"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>
