<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/number_of_objects_compatible_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_activity__number_of_objects" />

            <EditText
                android:id="@+id/number_of_objects_compatible_text_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:imeOptions="flagNoExtractUi"
                android:inputType="number" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/min_throw_compatible_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_activity__min_throw" />

            <EditText
                android:id="@+id/min_throw_compatible_text_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:imeOptions="flagNoExtractUi"
                android:inputType="number" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/max_throw_compatible_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_activity__max_throw" />

            <EditText
                android:id="@+id/max_throw_compatible_text_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:imeOptions="flagNoExtractUi"
                android:inputType="number" />
        </TableRow>
    </TableLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="10dp"
        android:orientation="horizontal">


        <CheckBox
            android:id="@+id/include_zips_compatible_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="20dp"
            android:text="@string/main_activity__include_zips" />

        <CheckBox
            android:id="@+id/include_zaps_compatible_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="20dp"
            android:text="@string/main_activity__include_zaps" />

        <CheckBox
            android:id="@+id/include_holds_compatible_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="20dp"
            android:text="@string/main_activity__include_holds" />

            </LinearLayout>

</LinearLayout>
