<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/appNameVersion"
        android:gravity="center" />

    <Space
        android:layout_width="20px"
        android:layout_height="20px" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/option_about__source_code_at"
        android:id="@+id/textView3"
        android:layout_gravity="center"
        android:gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/option_about__github_address"
        android:id="@+id/textView4"
        android:autoLink="web"
        android:layout_gravity="center"
        android:gravity="center" />

    <Space
        android:layout_width="20px"
        android:layout_height="20px" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/option_about__post_on_github"
        android:id="@+id/textView5"
        android:layout_gravity="center"
        android:gravity="center" />

</LinearLayout>
