<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/enter_siteswap_siteswap_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_activity__siteswap" />

        <EditText
            android:id="@+id/enter_siteswap_siteswap_text_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:imeOptions="flagNoExtractUi"
            android:inputType="text" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/enter_siteswap_number_of_jugglers_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_activity__number_of_jugglers" />

        <EditText
            android:id="@+id/enter_siteswap_number_of_jugglers_text_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:imeOptions="flagNoExtractUi"
            android:inputType="number" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <CheckBox
            android:id="@+id/enter_siteswap_sync_mode_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_activity__sync_mode" />

    </TableRow>
</TableLayout>
